# raster-graphics-pipeline

./: .gitignore  CMakeLists.txt  README.md  main.cpp
pipeline/: Pipeline.cpp  Pipeline.h
pipeline/clipping/: Clipping.cpp  Clipping.h
pipeline/model/: Model.cpp  Model.h
pipeline/projection/: Projection.cpp  Projection.h
pipeline/view/: View.cpp  View.h
utils/command/: Command.cpp  Command.h
utils/matrix/: Matrix.cpp  Matrix.h
utils/point/: Point.h
utils/transformation/: Transformation.cpp  Transformation.h
utils/triangle/: Triangle.cpp  Triangle.h
